[package]
name = "km_common"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
memmap2.workspace = true
prost.workspace = true
uuid = { workspace = true, features = ["serde"] }
zeroize = { workspace = true, features = ["derive"] }
thiserror.workspace = true
bssl-crypto.workspace = true
clear_on_drop.workspace = true
secrecy = "0.10.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-journald = "0.3"

[features]
test-utils = []

[dev-dependencies]
hex.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
